// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mountWithContexts injected ConfigProvider should mount and render with custom Config value 1`] = `
<Foo>
  <div>
    Fizz
    1.1
  </div>
</Foo>
`;

exports[`mountWithContexts injected ConfigProvider should mount and render with default values 1`] = `
<Foo>
  <div />
</Foo>
`;

exports[`mountWithContexts injected I18nProvider should mount and render 1`] = `
<div>
  <span>
    Text content
  </span>
</div>
`;

exports[`mountWithContexts injected I18nProvider should mount and render deeply nested consumer 1`] = `
<Parent>
  <WithI18n>
    <I18n
      update={true}
      withHash={true}
    >
      <Component
        i18n={"/i18n/"}
      >
        <div>
          Text content
        </div>
      </Component>
    </I18n>
  </WithI18n>
</Parent>
`;

exports[`mountWithContexts injected Router should mount and render 1`] = `
<div>
  <Link
    to="/"
  >
    <LinkAnchor
      href="/"
      navigate={[Function]}
    >
      <a
        href="/"
        onClick={[Function]}
      >
        home
      </a>
    </LinkAnchor>
  </Link>
</div>
`;
